# ParkourRun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  content.pack  contentlist.txt  itch_thumbnail.psd
content/levels/: level1.map
content/sprites/: background.psd
content/sprites/world_objects/: player.psd
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/main/: CMakeLists.txt  animator.cpp  animator.h  app.cpp  app.h  level.cpp  level.h  level_manager.cpp  level_manager.h  main.cpp  resource_manager.cpp  resource_manager.h  tiles.cpp  tiles.h
src/packfile/: CMakeLists.txt  packfile.cpp
